비주얼 영역 hover 효과 완성/반응형 완성

--- a/index.html
+++ b/index.html
@@ -1,221 +1,308 @@
 <!DOCTYPE html>
 <html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>화승그룹</title>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <script src="./js/jquery-3.7.0.min.js"></script>
+    <script src="./js/script.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>화승그룹</title>
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/common.css">
-  <link rel="stylesheet" href="./css/style.css">
-</head>
+  <body>
+    <!-- a.skip.hidden{본문 바로가기} -->
+    <a href="#container" class="skip hidden">본문 바로가기</a>
 
-<body>
-  <!-- a.skip.hidden{본문 바로가기} -->
-  <a href="#container" class="skip hidden">본문 바로가기</a>
+    <!-- header#header+main#container+footer#footer -->
+    <!-- s: header -->
+    <header id="header">
+      <!-- .inner.inner-wide>nav>h1.logo+ul.gnb+.util -->
+      <div class="inner inner-wide">
+        <nav>
+          <h1 class="logo">
+            <a href="#"><i class="hidden">화승그룹</i></a>
+          </h1>
 
-  <!-- header#header+main#container+footer#footer -->
-  <!-- s: header -->
-  <header id="header">
-    <!-- .inner.inner-wide>nav>h1.logo+ul.gnb+.util -->
-    <div class="inner inner-wide">
-      <nav>
-        <h1 class="logo">
-          <a href="#"><i class="hidden">화승그룹</i></a>
-        </h1>
+          <ul class="gnb">
+            <li><a href="#">화승</a></li>
+            <li><a href="#">사업분야</a></li>
+            <li><a href="#">PR ROOM</a></li>
+            <li><a href="#">지속가능경영</a></li>
+          </ul>
 
-        <ul class="gnb">
-          <li><a href="#">화승</a></li>
-          <li><a href="#">사업분야</a></li>
-          <li><a href="#">PR ROOM</a></li>
-          <li><a href="#">지속가능경영</a></li>
-        </ul>
-
-        <div class="util">
-          <!-- button:button*2 -->
-          <button class="btn-lang" type="button"><i class="hidden">언어선택</i></button>
-          <button class="btn-menu" type="button"><i class="hidden">메뉴</i></button>
-        </div>
-
-      </nav>
-    </div>
-  </header>
-  <hr>
-  <!-- //e: header -->
-
-  <!-- s: container -->
-  <main id="container">
-    <!-- 비주얼 영역 -->
-    <section class="visual">
-      <!-- .video+.visual-con>h2+a -->
-      <div class="video"></div>
-      <div class="inner">
-        <div class="visual-con">
-          <h2>70년을 넘어,<br> 100년 기업을 향한<br> 화승의 도전</h2>
-          <a href="#">Introduction</a>
-        </div>
+          <div class="util">
+            <!-- button:button*2 -->
+            <button class="btn-lang" type="button">
+              <i class="hidden">언어선택</i>
+            </button>
+            <button class="btn-menu" type="button">
+              <i class="hidden">메뉴</i>
+            </button>
+          </div>
+        </nav>
       </div>
-    </section>
+    </header>
+    <hr />
+    <!-- //e: header -->
 
-    <!-- 사업분야 -->
-    <section class="business">
-      <div class="inner">
-
-        <!-- .sec-title>h3+p -->
-        <div class="sec-title">
-          <h3>사업분야</h3>
-          <p>압도적인 기술력을 바탕으로<br>
-            당신의 일상을 새롭게 만듭니다</p>
+    <!-- s: container -->
+    <main id="container">
+      <!-- 비주얼 영역 -->
+      <section class="visual">
+        <!-- .video+.visual-con>h2+a -->
+        <div class="video">
+          <iframe
+            src="https://www.youtube.com/embed/dKgtAX1G_tE?si=ilHN6d8-n1WZuosp&amp;controls=0&amp;autoplay=1&amp;mute=1&amp;loop=1&amp;playlist=dKgtAX1G_tE"
+            title="YouTube video player"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
         </div>
-
-        <!-- ul.business-list>li*5>a -->
-        <ul class="business-list">
-          <li><a href="#">소재</a></li>
-          <li><a href="#">자동차 부품</a></li>
-          <li><a href="#">종합무역</a></li>
-          <li><a href="#">화학</a></li>
-          <li><a href="#">스포츠패션ODM</a></li>
-        </ul>
-
-      </div>
-    </section>
-
-    <!-- PR ROOM -->
-    <section class="pr">
-      <div class="inner">
-        <!-- .sec-title>h3+p -->
-        <div class="sec-title">
-          <h3>PR ROOM</h3>
-          <p>연결의 기술로 미래를 새롭게 그립니다<br>
-            인화의 가치로 세상을 이롭게 만듭니다</p>
+        <div class="inner">
+          <div class="visual-con">
+            <h2>
+              70년을 넘어,<br />
+              100년 기업을 향한<br />
+              화승의 도전
+            </h2>
+            <a href="#">Introduction</a>
+          </div>
         </div>
+      </section>
 
-        <!-- ul.pr-list>li*3>a -->
-        <ul class="pr-list">
-          <li><a href="#">보도자료</a></li>
-          <li><a href="#">홍보영상</a></li>
-          <li><a href="#">사보</a></li>
-        </ul>
-      </div>
-    </section>
+      <!-- 사업분야 -->
+      <section class="business">
+        <div class="inner">
+          <!-- .sec-title>h3+p -->
+          <div class="sec-title">
+            <h3>사업분야</h3>
+            <p>
+              압도적인 기술력을 바탕으로<br />
+              당신의 일상을 새롭게 만듭니다
+            </p>
+          </div>
 
-    <!-- 지속가능경영 -->
-    <section class="management">
-      <div class="inner">
-        <!-- .sec-title>h3+p -->
-        <div class="sec-title">
-          <h3>지속가능경영</h3>
-          <p>쉬운 길보다는 옳은 길로,<br>
-            더 나은 미래를 위한 탐구는 계속됩니다</p>
-        </div>
-      </div>
-
-      <!-- .management-list>div*4>a>strong -->
-      <div class="management-list">
-        <div><a href="#"><strong>나눔경영</strong></a></div>
-        <div><a href="#"><strong>환경경영</strong></a></div>
-        <div><a href="#"><strong>사회경영</strong></a></div>
-        <div><a href="#"><strong>투명경영</strong></a></div>
-      </div>
-    </section>
-
-    <!-- Heritage of Hwaseung -->
-    <section class="heritage">
-      <div class="inner">
-
-        <!-- .heritage-con>h4+strong+p+a -->
-        <div class="heritage-con">
-          <h4>Heritage of Hwaseung</h4>
-          <strong>70년을 넘어 100년기업으로 향하는 화승</strong>
-          <p>화승은 창립 이후 더 나은 내일을 위해, 더 크게 성장할 미래를 위해 차근차근 달려왔습니다.<br>
-            화승의 기록을 담은 역사 사진으로 또 다른 내일을 만납니다.</p>
-          <a href="#">화승 70주년 기념 역사관 ‘HISTORY’ 보기</a>
-        </div>
-
-      </div>
-    </section>
-  </main>
-  <hr>
-  <!-- //e: container -->
-
-  <!-- s: footer -->
-  <footer id="footer">
-    <div class="inner inner-wide">
-
-      <!-- 상단: 메뉴들, 패밀리사이트, 개인정보처리방침..., 인스타링크 -->
-      <div class="foot-links">
-        <div class="foot-menu">
-          <!-- ul>li*4>dl>dt+dd*4>a -->
-          <ul>
+          <!-- ul.business-list>li*5>a -->
+          <ul class="business-list">
             <li>
-              <dl>
-                <dt>화승</dt>
-                <dd><a href="#">그룹개요</a></dd>
-                <dd><a href="#">가치체계</a></dd>
-                <dd><a href="#">CI</a></dd>
-                <dd><a href="#">계열사 위치</a></dd>
-              </dl>
+              <a href="#"
+                ><span>소재</span>
+                <dl class="detail-info">
+                  <dl>소재</dl>
+                  <dd>
+                    화승 고유의 컴파운드 배합기술은 우리 생활 곳곳은 물론 다양한
+                    산업 현장에서도 만날 수 있습니다. 화승은 지속적인 변화와
+                    혁신을 통해 우리의 일상을 더 특별하게 만들고 있습니다.
+                  </dd>
+                </dl>
+              </a>
             </li>
             <li>
-              <dl>
-                <dt>사업분야</dt>
-                <dd><a href="#">자동차 부품</a></dd>
-                <dd><a href="#">종합무역</a></dd>
-                <dd><a href="#">소재</a></dd>
-                <dd><a href="#">화학</a></dd>
-                <dd><a href="#">스포츠패션ODM</a></dd>
-              </dl>
+              <a href="#"
+                ><span>자동차 부품</span>
+                <!-- dl.detail-info>dt+dd -->
+                <dl class="detail-info">
+                  <dt>자동차 부품</dt>
+                  <dd>
+                    화승의 자동차부품 사업군은 국내 점유율 1위를 지켜감과 동시에
+                    전세계 곳곳의 해외 법인에서도 압도적인 기술력을 통한 NO.1
+                    테크기업으로서 세계 유수의 완성차 브랜드와 함께하고
+                    있습니다.
+                  </dd>
+                </dl>
+              </a>
             </li>
             <li>
-              <dl>
-                <dt>PR ROOM</dt>
-                <dd><a href="#">보도자료</a></dd>
-                <dd><a href="#">홍보영상</a></dd>
-                <dd><a href="#">사보</a></dd>
-              </dl>
+              <a href="#"
+                ><span>종합무역</span>
+                <dl class="detail-info">
+                  <dt>종합무역</dt>
+                  <dd>
+                    화승은 전략적인 구매 및 조달 분석으로 공급망 밸류 체인을
+                    형성해 글로벌 SCM부터 화학원자재, MRO, 국내외 철강 및 식육의
+                    유통까지 경쟁력있는 무역회사로 성장하고 있습니다.
+                  </dd>
+                </dl>
+              </a>
             </li>
             <li>
-              <dl>
-                <dt>지속가능경영</dt>
-                <dd><a href="#">나눔경영</a></dd>
-                <dd><a href="#">환경경영</a></dd>
-                <dd><a href="#">사회경영</a></dd>
-                <dd><a href="#">투명경영</a></dd>
-              </dl>
+              <a href="#"
+                ><span>화학</span>
+                <dl class="detail-info">
+                  <dt>화학</dt>
+                  <dd>
+                    화승은 독자적인 연구 플랫폼을 통해 R&D를 넘어 C&D로 나아가는
+                    미래 첨단 기술 인프라를 끊임없이 넓혀가고 있습니다. 세계
+                    최고의 화학 기술로 고객과 함께하고 있습니다.
+                  </dd>
+                </dl>
+              </a>
+            </li>
+            <li>
+              <a href="#"
+                ><span>스포츠패션ODM</span>
+                <dl class="detail-info">
+                  <dt>스포츠패션ODM</dt>
+                  <dd>
+                    화승은 신발을 넘어 모자, 의류 등 다양한 스포츠패션
+                    아이템들을 생산하는 세계 최고의 스마트 팩토리 파트너로 고객
+                    지향적 ODM 기술력을 통해 글로벌 브랜드들과 함께 새로운
+                    미래를 열어가고 있습니다.
+                  </dd>
+                </dl>
+              </a>
             </li>
           </ul>
         </div>
+      </section>
 
-        <div class="foot-family">
-
-          <div class="family-site">
-            <select>
-              <option value="">(주)화승네트웍스</option>
-              <option value="">(주)화승R&A</option>
-              <option value="">(주)화승코퍼레이션</option>
-              <option value="">(주)화승케이컬</option>
-            </select>
+      <!-- PR ROOM -->
+      <section class="pr">
+        <div class="inner">
+          <!-- .sec-title>h3+p -->
+          <div class="sec-title">
+            <h3>PR ROOM</h3>
+            <p>
+              연결의 기술로 미래를 새롭게 그립니다<br />
+              인화의 가치로 세상을 이롭게 만듭니다
+            </p>
           </div>
 
-          <ul class="policy-list">
-            <li><a href="#">개인정보처리방침</a></li>
-            <li><a href="#">이용약관</a></li>
+          <!-- ul.pr-list>li*3>a -->
+          <ul class="pr-list">
+            <li><a href="#">보도자료</a></li>
+            <li><a href="#">홍보영상</a></li>
+            <li><a href="#">사보</a></li>
           </ul>
+        </div>
+      </section>
 
-          <div class="sns-list">
-            <a href="#"><i class="hidden">인스타그램</i></a>
+      <!-- 지속가능경영 -->
+      <section class="management">
+        <div class="inner">
+          <!-- .sec-title>h3+p -->
+          <div class="sec-title">
+            <h3>지속가능경영</h3>
+            <p>
+              쉬운 길보다는 옳은 길로,<br />
+              더 나은 미래를 위한 탐구는 계속됩니다
+            </p>
+          </div>
+        </div>
+
+        <!-- .management-list>div*4>a>strong -->
+        <div class="management-list">
+          <div>
+            <a href="#"><strong>나눔경영</strong></a>
+          </div>
+          <div>
+            <a href="#"><strong>환경경영</strong></a>
+          </div>
+          <div>
+            <a href="#"><strong>사회경영</strong></a>
+          </div>
+          <div>
+            <a href="#"><strong>투명경영</strong></a>
+          </div>
+        </div>
+      </section>
+
+      <!-- Heritage of Hwaseung -->
+      <section class="heritage">
+        <div class="inner">
+          <!-- .heritage-con>h4+strong+p+a -->
+          <div class="heritage-con">
+            <h4>Heritage of Hwaseung</h4>
+            <strong>70년을 넘어 100년기업으로 향하는 화승</strong>
+            <p>
+              화승은 창립 이후 더 나은 내일을 위해, 더 크게 성장할 미래를 위해
+              차근차근 달려왔습니다. 화승의 기록을 담은 역사 사진으로 또 다른
+              내일을 만납니다.
+            </p>
+            <a href="#">화승 70주년 기념 역사관 ‘HISTORY’ 보기</a>
+          </div>
+        </div>
+      </section>
+    </main>
+    <hr />
+    <!-- //e: container -->
+
+    <!-- s: footer -->
+    <footer id="footer">
+      <div class="inner inner-wide">
+        <!-- 상단: 메뉴들, 패밀리사이트, 개인정보처리방침..., 인스타링크 -->
+        <div class="foot-links">
+          <div class="foot-menu">
+            <!-- ul>li*4>dl>dt+dd*4>a -->
+            <ul>
+              <li>
+                <dl>
+                  <dt>화승</dt>
+                  <dd><a href="#">그룹개요</a></dd>
+                  <dd><a href="#">가치체계</a></dd>
+                  <dd><a href="#">CI</a></dd>
+                  <dd><a href="#">계열사 위치</a></dd>
+                </dl>
+              </li>
+              <li>
+                <dl>
+                  <dt>사업분야</dt>
+                  <dd><a href="#">자동차 부품</a></dd>
+                  <dd><a href="#">종합무역</a></dd>
+                  <dd><a href="#">소재</a></dd>
+                  <dd><a href="#">화학</a></dd>
+                  <dd><a href="#">스포츠패션ODM</a></dd>
+                </dl>
+              </li>
+              <li>
+                <dl>
+                  <dt>PR ROOM</dt>
+                  <dd><a href="#">보도자료</a></dd>
+                  <dd><a href="#">홍보영상</a></dd>
+                  <dd><a href="#">사보</a></dd>
+                </dl>
+              </li>
+              <li>
+                <dl>
+                  <dt>지속가능경영</dt>
+                  <dd><a href="#">나눔경영</a></dd>
+                  <dd><a href="#">환경경영</a></dd>
+                  <dd><a href="#">사회경영</a></dd>
+                  <dd><a href="#">투명경영</a></dd>
+                </dl>
+              </li>
+            </ul>
           </div>
 
+          <div class="foot-family">
+            <div class="family-site">
+              <select>
+                <option value="#">Family Site</option>
+                <option value="#">(주)화승네트웍스</option>
+                <option value="#">(주)화승R&A</option>
+                <option value="#">(주)화승코퍼레이션</option>
+              </select>
+            </div>
+
+            <ul class="policy-list">
+              <li><a href="#">개인정보처리방침</a></li>
+              <li><a href="#">이용약관</a></li>
+            </ul>
+
+            <div class="sns-list">
+              <a href="#"><i class="hidden">인스타그램</i></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="foot-copyright">
+          <p>COPYRIGHT © 2024 HWASEUNG. ALL RIGHT RESERVED</p>
         </div>
       </div>
-
-      <div class="foot-copyright">
-        <p>COPYRIGHT © 2024 HWASEUNG. ALL RIGHT RESERVED</p>
-      </div>
-
-    </div>
-  </footer>
-  <!-- //e: footer -->
-</body>
-
+    </footer>
+    <!-- //e: footer -->
+  </body>
 </html>
