서브 메뉴 구조 및 디자인 완성

--- a/index.html
+++ b/index.html
@@ -26,10 +26,18 @@
           </h1>
 
           <ul class="gnb">
-            <li><a href="#">화승</a></li>
-            <li><a href="#">사업분야</a></li>
-            <li><a href="#">PR ROOM</a></li>
-            <li><a href="#">지속가능경영</a></li>
+            <li>
+              <a href="#">화승</a>
+            </li>
+            <li>
+              <a href="#">사업분야</a>
+            </li>
+            <li>
+              <a href="#">PR ROOM</a>
+            </li>
+            <li>
+              <a href="#">지속가능경영</a>
+            </li>
           </ul>
 
           <div class="util">
@@ -42,6 +50,47 @@
             </button>
           </div>
         </nav>
+        <div class="submenu-wrap">
+          <ul>
+            <li>
+              <dl>
+                <dt>화승</dt>
+                <dd><a href="#">그룹개요</a></dd>
+                <dd><a href="#">가치체계</a></dd>
+                <dd><a href="#">CI</a></dd>
+                <dd><a href="#">계열사 위치</a></dd>
+              </dl>
+            </li>
+            <li>
+              <dl>
+                <dt>사업분야</dt>
+                <dd><a href="#">자동차 부품</a></dd>
+                <dd><a href="#">종합무역</a></dd>
+                <dd><a href="#">소재</a></dd>
+                <dd><a href="#">화학</a></dd>
+                <dd><a href="#">스포츠패션ODM</a></dd>
+              </dl>
+            </li>
+            <li>
+              <dl>
+                <dt>PR ROOM</dt>
+                <dd><a href="#">보도자료</a></dd>
+                <dd><a href="#">홍보영상</a></dd>
+                <dd><a href="#">사보</a></dd>
+              </dl>
+            </li>
+            <li>
+              <dl>
+                <dt>지속가능경영</dt>
+                <dd><a href="#">나눔경영</a></dd>
+                <dd><a href="#">환경경영</a></dd>
+                <dd><a href="#">사회경영</a></dd>
+                <dd><a href="#">투명경영</a></dd>
+              </dl>
+            </li>
+          </ul>
+        </div>
+        <div class="banner-slid"></div>
       </div>
     </header>
     <hr />
