메뉴 영역 스크립트 완성

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
 
           <ul class="gnb">
             <li>
-              <a href="#">화승</a>
+              <a href="#"><b>화승</b></a>
             </li>
             <li>
-              <a href="#">사업분야</a>
+              <a href="#"><b>사업분야</b></a>
             </li>
             <li>
-              <a href="#">PR ROOM</a>
+              <a href="#"><b>PR ROOM</b></a>
             </li>
             <li>
-              <a href="#">지속가능경영</a>
+              <a href="#"><b>지속가능경영</b></a>
             </li>
           </ul>
 
