모바일 용 메뉴 기본 동작 구현

--- a/index.html
+++ b/index.html
@@ -12,6 +12,49 @@
   </head>
 
   <body>
+    <div class="dim"></div>
+    <!-- 전체메뉴 : 모바일 -->
+    <div class="m-submenu-wrap">
+      <btton type="button" class="btn-close">닫기</button>
+      <ul class="m-gnb">
+        <li>
+          <strong>화승</strong>
+          <ul class="m-gnb-sub">
+            <li><a href="#">그룹개요</a></li>
+            <li><a href="#">가치체계</a></li>
+            <li><a href="#">CI</a></li>
+            <li><a href="#">계열사 위치</a></li>
+          </ul>
+        </li>
+        <li>
+          <strong>사업분야</strong>
+          <ul>
+            <li><a href="#">자동차 부품</a></li>
+            <li><a href="#">종합무역</a></li>
+            <li><a href="#">소재</a></li>
+            <li><a href="#">화학</a></li>
+            <li><a href="#">스포츠패션ODM</a></li>
+          </ul>
+        </li>
+        <li>
+          <strong>PR ROOM</strong>
+          <ul>
+            <li><a href="#">보도자료</a></li>
+            <li><a href="#">홍보영상</a></li>
+            <li><a href="#">사보</a></li>
+          </ul>
+        </li>
+        <li>
+          <dt>지속가능경영</dt>
+          <ul>
+            <li><a href="#">나눔경영</a></li>
+            <li><a href="#">환경경영</a></li>
+            <li><a href="#">사회경영</a></li>
+            <li><a href="#">투명경영</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
     <!-- a.skip.hidden{본문 바로가기} -->
     <a href="#container" class="skip hidden">본문 바로가기</a>
 
@@ -46,6 +89,9 @@
               <i class="hidden">언어선택</i>
             </button>
             <button class="btn-menu" type="button">
+              <i class="hidden">메뉴</i>
+            </button>
+            <button class="btn-m-menu" type="button">
               <i class="hidden">메뉴</i>
             </button>
           </div>
@@ -90,6 +136,7 @@
             </li>
           </ul>
         </div>
+
         <div class="banner-slid"></div>
       </div>
     </header>
