aos.js적용, resize 이벤트 추가

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>화승그룹</title>
+  <link rel="stylesheet" href="./css/aos.css">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/style.css">
 
   <script src="./js/jquery-3.7.0.min.js"></script>
+  <script src="./js/aos.js"></script>
   <script src="./js/script.js"></script>
 </head>
 
@@ -89,10 +91,11 @@
         <div class="util">
           <!-- button:button*2 -->
           <button class="btn-lang" type="button"><i class="hidden">언어선택</i></button>
-          <!-- 언어 선택 창  -->
+          <!-- 언어 선택 창 -->
           <div class="lang-select">
-            <a href="#">ENGLIST</a>
+            <a href="#">ENGLISH</a>
           </div>
+
           <button class="btn-menu" type="button"><i class="hidden">메뉴</i></button>
           <button class="btn-m-menu" type="button"><i class="hidden">메뉴</i></button>
         </div>
@@ -174,8 +177,8 @@
 
         <!-- .sec-title>h3+p -->
         <div class="sec-title">
-          <h3>사업분야</h3>
-          <p>압도적인 기술력을 바탕으로<br>
+          <h3 data-aos="fade-up">사업분야</h3>
+          <p data-aos="fade-up" data-aos-delay="300">압도적인 기술력을 바탕으로<br>
             당신의 일상을 새롭게 만듭니다</p>
         </div>
 
@@ -251,8 +254,8 @@
       <div class="inner">
         <!-- .sec-title>h3+p -->
         <div class="sec-title">
-          <h3>PR ROOM</h3>
-          <p>연결의 기술로 미래를 새롭게 그립니다<br>
+          <h3 data-aos="fade-up" >PR ROOM</h3>
+          <p data-aos="fade-up" data-aos-delay="300">연결의 기술로 미래를 새롭게 그립니다<br>
             인화의 가치로 세상을 이롭게 만듭니다</p>
         </div>
 
@@ -270,8 +273,8 @@
       <div class="inner">
         <!-- .sec-title>h3+p -->
         <div class="sec-title">
-          <h3>지속가능경영</h3>
-          <p>쉬운 길보다는 옳은 길로,<br>
+          <h3 data-aos="fade-up" >지속가능경영</h3>
+          <p data-aos="fade-up" data-aos-delay="300">쉬운 길보다는 옳은 길로,<br>
             더 나은 미래를 위한 탐구는 계속됩니다</p>
         </div>
       </div>
@@ -291,11 +294,11 @@
 
         <!-- .heritage-con>h4+strong+p+a -->
         <div class="heritage-con">
-          <h4>Heritage of Hwaseung</h4>
-          <strong>70년을 넘어 100년기업으로 향하는 화승</strong>
-          <p>화승은 창립 이후 더 나은 내일을 위해, 더 크게 성장할 미래를 위해 차근차근 달려왔습니다.<br>
+          <h4 data-aos="fade-up" >Heritage of Hwaseung</h4>
+          <strong data-aos="fade-up" data-aos-delay="300">70년을 넘어 100년기업으로 향하는 화승</strong>
+          <p data-aos="fade-up" data-aos-delay="500">화승은 창립 이후 더 나은 내일을 위해, 더 크게 성장할 미래를 위해 차근차근 달려왔습니다.<br>
             화승의 기록을 담은 역사 사진으로 또 다른 내일을 만납니다.</p>
-          <a href="#">화승 70주년 기념 역사관 ‘HISTORY’ 보기</a>
+          <a href="#" data-aos="fade-up" data-aos-delay="700">화승 70주년 기념 역사관 ‘HISTORY’ 보기</a>
         </div>
 
       </div>
